--- a/site.yml
+++ b/site.yml
@@ -9,3 +9,9 @@
 - import_playbook: ./users.yml
 - import_playbook: ./fluentd.yml
 - import_playbook: ./vim.yml
+- import_playbook: ./firewalld.yml
+- import_playbook: ./openjdk.yml
+- import_playbook: ./pip.yml
+- import_playbook: ./postgresql_yum.yml
+- import_playbook: ./sonar.yml
+- import_playbook: ./terraform.yml
